# vrag

./: .env.example  .gitignore  CHANGELOG.md  INFRASTRUCTURE_REPORT.md  QUICKSTART_WEB.md  README.md  WEB_VOICE_TEST.md  pyproject.toml  requirements.txt  run_experiment1.sh  run_experiment3.sh  server.py  start_web_server.sh
data/: company_graph.py
data/documents/companies/: company_001_basic.md  company_001_painpoints.md  company_001_project_0.md  company_001_relations.md  company_002_basic.md  company_002_painpoints.md  company_002_relations.md  company_003_basic.md  company_003_painpoints.md  company_003_project_0.md  company_003_relations.md  company_004_basic.md  company_004_painpoints.md  company_004_relations.md  company_005_basic.md  company_005_painpoints.md  company_005_project_0.md  company_005_relations.md  company_006_basic.md  company_006_painpoints.md  company_006_relations.md  (+15 more)
docs/: 0. requirements.md  1. WORKSHOP_COMPLETE_PLAN.md  2. 实验开发文档.md  4. 实验2-RAG融合设计.md  6. 实验3-使用指南.md  7. 实验3-准备总结.md  EXPERIMENT3_RESULTS.md  实验2-RAG融合设计.md
experiment/: __init__.py  conftest.py  rag_utils.py  test_02_rag_effect.py
experiments/: CHANGELOG_v3_to_v4.md  analyze_exp3_v3_results.py  analyze_latency_performance.py  analyze_method4_details.py  incremental_summarizer.py  incremental_summarizer_v2.py  incremental_summarizer_v3.py  llm_judge_rescorer.py  long_audio_test_cases_v2.json  test_01_model_comparison.py  test_03_v2.py  test_03_v3_dual_model.py  test_03_v3_local.py  test_03_v3_server.py
notebooks/: workshop_demo.ipynb
scripts/: create_workshop_notebook.py  monitor_dual_experiment.sh  monitor_experiment3.sh  run_experiment3_dual_model.sh  start_dual_vllm_services.sh  view_company_graph.py
src/adapters/: __init__.py
src/agents/: input_completion_agent.py
src/config/: settings.py
src/llm/: qwen_service.py
src/pipeline/: voice_assistant.py
src/server/: __init__.py  api.py  models.py  session_manager.py  websocket.py
src/speech/: stt_silero_service.py  tts_service.py
tests/: test_company_graph.py
web/: index.html
(+16 files in other folders)
